deviseにnameとimageを追加

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,7 +14,7 @@
 </div>
 <% else %>
 <div class="login">
-    <a href="#">ログイン</a>
+    <a href="/users/sign_in">ログイン</a>
 </div>
 <% end %>
 
@@ -42,16 +42,17 @@
     <li><a href="/follow" target="_blank">フォロー機能</a></li>
     <li><a href="/like" target="_blank">いいね機能</a></li>
     <li><a href="/message" target="_blank">メッセージ機能</a></li>
-    <li><a href="/s3" target="_blank">Amazon S3</a></li>
+    <li><a href="/s3" target="_blank">Amazon S3　動画投稿</a></li>
     <li><a href="/notification" target="_blank">通知機能　課題</a></li> <!-- Facebook, LINE -->
     <li><a href="/ranking" target="_blank">ランキング機能を作成</a></li>
     <li><a href="/ecsite" target="_blank">ECサイトを作成</a></li>
     <li><a href="/evaluation" target="_blank">評価サイトを作成　課題</a></li> <!-- Amazon -->
     <li><a href="/rspec" target="_blank">Rspec</a></li>
-    <li><a href="/html_css" target="_blank">HTML,CSS基礎と応用</a></li>
+<!--    <li><a href="/html_css" target="_blank">HTML,CSS基礎と応用</a></li>
     <li><a href="/sass" target="_blank">SASS</a></li>
     <li><a href="/js" target="_blank">Javascript基礎と応用</a></li>
     <li><a href="/jquery" target="_blank">jQuery基礎と応用</a></li>
     <li><a href="/angular" target="_blank">AngularJS基礎と応用</a></li>
+-->
 </ul>
 </div>
